--- a/posts/2018-09-15-time_use.qmd
+++ b/posts/2018-09-15-time_use.qmd
@@ -10,7 +10,7 @@ toc: true
 <div style="text-align: center; transform: scale(0.7); transform-origin: center;">
   <p>
     <a href="https://brodriguesco.shinyapps.io/time_use_luxembourg/">
-      <img src="../assets/img/time_use_dashboard.png" />
+      <img src="../assets/img/time_use_dashboard.png" / width="80%" height="auto">
     </a>
   </p>
 </div>
