--- a/posts/2019-01-13-newspapers_mets_alto.qmd
+++ b/posts/2019-01-13-newspapers_mets_alto.qmd
@@ -12,7 +12,7 @@ execute:
 
 <div style="text-align:center;">
 <p><a href="https://www.youtube.com/watch?v=V1qpvpH26fo">
-<img src="../assets/img/union.png" title = "The 19th century was a tough place"></a></p>
+<img src="../assets/img/union.png" title = "The 19th century was a tough place" width="80%" height="auto"></a></p>
 </div>
 <p>Last week I wrote a <a href="https://www.brodrigues.co/blog/2019-01-04-newspapers/">blog post</a> where I analyzed
 one year of newspapers ads from 19th century newspapers. The data is made available by the
@@ -24,10 +24,10 @@ the national library also included ALTO and METS files (which are a XML files us
 describe the layout and contents of physical text sources, such as pages of a book or newspaper)
 which can be easily parsed by R.</p>
 <p>This is how a ALTO file looks like:</p>
-<p><img src="../assets/img/alto.png" /><!-- --></p>
+<p><img src="../assets/img/alto.png" width="80%" height="auto"><!-- --></p>
 <p>Each page of the newspaper of a given day has one ALTO file.
 This is how a METS file looks like:</p>
-<p><img src="../assets/img/mets.png" /><!-- --></p>
+<p><img src="../assets/img/mets.png" width="80%" height="auto"><!-- --></p>
 <p>For each daily issue of the newspaper, there is a METS file. So 1 METS file for 4 ALTO files.</p>
 <p>In my last blog post, I only extracted the words from the ALTO file (red rectangles of the first
 screenshot) and did not touch the METS file.
@@ -38,9 +38,9 @@ metadata, such as the title of the article and the type of the article (which ca
 <em>advertisement</em>, etc). The information highlighted with the green rectangles in the METS file
 can be linked to the green rectangles from the ALTO files. My goal is to get the following data
 frame from the METS file:</p>
-<p><img src="../assets/img/mets_df.png" /><!-- --></p>
+<p><img src="../assets/img/mets_df.png" width="80%" height="auto"><!-- --></p>
 <p>and this data frame from the ALTO files:</p>
-<p><img src="../assets/img/alto_df.png" /><!-- --></p>
+<p><img src="../assets/img/alto_df.png" width="80%" height="auto"><!-- --></p>
 <p>As you can see, by combining both data frames I can know which words come from the same article,
 which will be helpful for further analysis.
 <a href="https://en.wikipedia.org/wiki/1860s">A lot of things happened in the 1860s.</a>
