--- a/posts/2019-05-04-diffindiff_part2.qmd
+++ b/posts/2019-05-04-diffindiff_part2.qmd
@@ -12,7 +12,7 @@ execute:
 
 <div style="text-align:center;">
 <p><a href="https://en.wikipedia.org/wiki/Joke">
-<img src="../assets/img/distracted_economist.jpg" title = "Soon, humanity will only communicate in memes"></a></p>
+<img src="../assets/img/distracted_economist.jpg" title = "Soon, humanity will only communicate in memes" width="80%" height="auto" width="80%" height="auto"></a></p>
 </div>
 <p>I am currently working on a package for the R programming language; its initial goal was to simply
 distribute the data used in the Card and Krueger 1994 paper that you can read
@@ -233,6 +233,6 @@ you need to create a <code>data.R</code> script in the <code>R/</code> folder. Y
     labs(title = &quot;Distribution of starting wage rates in fast food restaurants&quot;,
          caption = &quot;On April 1st, 1992, New Jersey&#39;s minimum wage rose from $4.25 to $5.05. Source: Card and Krueger (1994)&quot;)</code></pre>
 <pre><code>## Warning: Removed 41 rows containing non-finite values (stat_density).</code></pre>
-<p><img src="../assets/img/diffindiff_part2-6-1.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/diffindiff_part2-6-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>In the next blog post, I am going to write a first function to perform diff and diff, and we will
 learn how to make it available to users, document and test it!</p>
