--- a/posts/2018-10-27-lux_elections_analysis.qmd
+++ b/posts/2018-10-27-lux_elections_analysis.qmd
@@ -12,7 +12,7 @@ execute:
 
 <div style="text-align:center;">
 <p><a href="https://www.youtube.com/watch?v=Bw8g_1VEEL8">
-<img src="../assets/img/europe_map_lux.png"/></a></p>
+<img src="../assets/img/europe_map_lux.png"/ width="80%" height="auto"></a></p>
 </div>
 <div id="abstract" class="section level2">
 <h2>Abstract</h2>
@@ -139,12 +139,12 @@ should be good enough:</p>
                                  &quot;LSAP&quot; = &quot;#ad3648&quot;,
                                  &quot;PIRATEN&quot; = &quot;#ad5ea9&quot;))</code></pre>
 
-<p><img src="../assets/img/lux_elections_analysis-17-1.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-17-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 
 <p>Not too bad, but we can’t really read anything from the pie charts. I will now make their size
 proportional to the number of voters in each commune. For this, I need to go back to the Excel
 sheets, and look for the right cell:</p>
-<p><img src="../assets/img/electeurs_inscrits.png" /><!-- --></p>
+<p><img src="../assets/img/electeurs_inscrits.png" / width="80%" height="auto"><!-- --></p>
 <p>It will be easy to extract this info. It located in cell “E5”:</p>
 <pre class="r"><code>elections_raw_2018 &lt;- xlsx_cells(&quot;leg-2018-10-14-22-58-09-737.xlsx&quot;)
 
@@ -184,7 +184,7 @@ size proportional to the number of electors in that commune:</p>
                                  &quot;PIRATEN&quot; = &quot;#ad5ea9&quot;))</code></pre>
 <pre><code>## Warning: Removed 32 rows containing non-finite values (stat_pie).</code></pre>
 
-<p><img src="../assets/img/lux_elections_analysis-21-1.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-21-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 
 <p>Ok, that was not a good idea! Perhaps the best option would be to have one map per circonscription.
 For this, I need the list of communes by circonscription. This is available on Wikipedia. Here are
@@ -249,17 +249,17 @@ This is nice because I do not need to copy and paste the code 4 times:</p>
 )</code></pre>
 <pre><code>## $centre</code></pre>
 
-<p><img src="../assets/img/lux_elections_analysis-24-1.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-24-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 
 <pre><code>## 
 ## $est</code></pre>
-<p><img src="../assets/img/lux_elections_analysis-24-2.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-24-2.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## $nord</code></pre>
-<p><img src="../assets/img/lux_elections_analysis-24-3.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-24-3.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## $sud</code></pre>
-<p><img src="../assets/img/lux_elections_analysis-24-4.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-24-4.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>I created an anonymous function of three argument, <code>x</code>, <code>y</code> and <code>z</code>. If you are unfamiliar with
 <code>pmap()</code>, study the above code closely. If you have questions, do not hesitate to reach out!</p>
 <p>The pie charts are still quite small, but if I try to change the size of the pie charts,
@@ -292,17 +292,17 @@ lot of electors, and some a very small number. Perhaps I can try with the log of
      }
 )</code></pre>
 <pre><code>## $centre</code></pre>
-<p><img src="../assets/img/lux_elections_analysis-25-1.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-25-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## $est</code></pre>
-<p><img src="../assets/img/lux_elections_analysis-25-2.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-25-2.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## $nord</code></pre>
 <pre><code>## Warning: Removed 16 rows containing non-finite values (stat_pie).</code></pre>
-<p><img src="../assets/img/lux_elections_analysis-25-3.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-25-3.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## $sud</code></pre>
-<p><img src="../assets/img/lux_elections_analysis-25-4.png" width="768" /></p>
+<div style="text-align: center;"><img src="../assets/img/lux_elections_analysis-25-4.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>This looks better now!</p>
 </div>
 <div id="conclusion" class="section level2">
