--- a/posts/2018-11-03-nethack_analysis.qmd
+++ b/posts/2018-11-03-nethack_analysis.qmd
@@ -11,7 +11,7 @@ execute:
 
 <div style="text-align:center;">
 <p><a href="https://www.youtube.com/watch?v=dpM2o4dRLto">
-<img src="../assets/img/deepfried_loss.png" title = "Click here to listen to epic music while reading"></a></p>
+<img src="../assets/img/deepfried_loss.png" title = "Click here to listen to epic music while reading" width="80%" height="auto"></a></p>
 </div>
 <div id="abstract" class="section level2">
 <h2>Abstract</h2>
@@ -415,7 +415,7 @@ ggplot(runs_per_day, aes(y = n, x = date)) +
   geom_smooth(colour = &quot;#82518c&quot;) + 
   theme_blog()</code></pre>
 <pre><code>## `geom_smooth()` using method = &#39;gam&#39; and formula &#39;y ~ s(x, bs = &quot;cs&quot;)&#39;</code></pre>
-<p><img src="../assets/img/nethack_analysis-12-1.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-12-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>The number of games seems to be stable since 2015, around 50. But what is also interesting is not
 only the number of games played, but also how many of these games resulted in a win.</p>
 <p>For this, let’s also add a new column that tells us whether the played <em>ascended</em> (won the game)
@@ -435,7 +435,7 @@ ggplot(ascensions_per_day) +
   labs(y = &quot;Number of runs&quot;, x = &quot;Date&quot;) +
   scale_fill_blog() +
   theme(legend.title = element_blank())</code></pre>
-<p><img src="../assets/img/nethack_analysis-14-1.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-14-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>Yeah, just as expected. Because there is so much data, it’s difficult to see clearly, though. Depending on
 the size of the screen you’re reading this, it might seem that in some days there are a lot of ascensions.
 This is only an impression due to the resolution of the picture. Let’s see the share of ascensions per
@@ -453,7 +453,7 @@ year (and how many times the quests fail miserably), and this will become more a
   theme_blog() + 
   scale_fill_blog() + 
   theme(legend.title = element_blank())</code></pre>
-<p><img src="../assets/img/nethack_analysis-15-1.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-15-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>I will now convert the “time” column to seconds. I am not yet sure that this column is really useful,
 because NetHack is a turn based game. This means that when the player does not move, neither do the
 monsters. So the seconds spent playing might not be a good proxy for actual time spent playing.
@@ -499,7 +499,7 @@ This must be a mistake, because that is almost one year!</p>
   ggplot() + 
   geom_density(aes(x = time_in_seconds), colour = &quot;#82518c&quot;) + 
   theme_blog()</code></pre>
-<p><img src="../assets/img/nethack_analysis-20-1.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-20-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>As expected, the distribution is right skewed. However, as explained above NetHack is a turn based
 game, meaning that if the player does not move, the monsters won’t move either. Perhaps it makes more
 sense to look at the <code>turns</code> column:</p>
@@ -518,7 +518,7 @@ sense to look at the <code>turns</code> column:</p>
   ggplot() + 
   geom_density(aes(x = turns), colour = &quot;#82518c&quot;) + 
   theme_blog()</code></pre>
-<p><img src="../assets/img/nethack_analysis-22-1.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-22-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>I think that using <code>turns</code> makes more sense. In the a future blog post, I will estimate a survival
 model and see how long players survive, and will use <code>turns</code> instead of <code>time_in_seconds</code>.</p>
 </div>
@@ -597,7 +597,7 @@ Most likely, these are going to be early game monsters. Let’ see:</p>
     ylab(&quot;Number of deaths caused&quot;) +
     xlab(&quot;Monster&quot;)</code></pre>
 <pre><code>## Selecting by n</code></pre>
-<p><img src="../assets/img/nethack_analysis-25-1.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-25-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>Seems like soldier ants are the baddest, followed by jackals and dwarfs. As expected, these are
 mostly early game monsters. Thus, it would be interesting to look at this distribution, but at
 different stages in the game. Let’s create a categorical variable that discretizes <code>turns</code>,
@@ -637,22 +637,22 @@ and then create one plot per category:</p>
     pull(plots)</code></pre>
 <pre><code>## Selecting by n</code></pre>
 <pre><code>## [[1]]</code></pre>
-<p><img src="../assets/img/nethack_analysis-26-1.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-26-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## [[2]]</code></pre>
-<p><img src="../assets/img/nethack_analysis-26-2.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-26-2.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## [[3]]</code></pre>
-<p><img src="../assets/img/nethack_analysis-26-3.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-26-3.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## [[4]]</code></pre>
-<p><img src="../assets/img/nethack_analysis-26-4.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-26-4.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## [[5]]</code></pre>
-<p><img src="../assets/img/nethack_analysis-26-5.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-26-5.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <pre><code>## 
 ## [[6]]</code></pre>
-<img src="../assets/img/nethack_analysis-26-6.png" width="672" />
+<img src="../assets/img/nethack_analysis-26-6.png" width="80%" height="auto" / width="80%" height="auto">
 </details>
 <p>Finally, for this section, I want to know if there are levels, or floors, where players die more
 often than others. For this, we can take a look at the <code>lev_max</code> column. Observations in this
@@ -730,7 +730,7 @@ surviving players:</p>
     theme(axis.text.x = element_text(angle = 90),
           legend.position = &quot;none&quot;) + 
     scale_y_continuous(labels = scales::percent)</code></pre>
-<p><img src="../assets/img/nethack_analysis-33-1.png" width="672" /></p>
+<div style="text-align: center;"><img src="../assets/img/nethack_analysis-33-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
 <p>Looks like level 7 is consistently the most dangerous! The death rate there is more than 35%!</p>
 <p>That’s it for this blog post, in the next one, I will focus on what players kill!</p>
 </div>
