--- a/posts/2018-12-15-lubridate_africa.qmd
+++ b/posts/2018-12-15-lubridate_africa.qmd
@@ -12,7 +12,7 @@ execute:
 
 <div style="text-align:center;">
 <p><a href="https://www.youtube.com/watch?v=FTQbiNvZqaY">
-<img width = "400" src="../assets/img/africa.jpg" title = "One of my favourite songs"></a></p>
+<img width = "400" src="../assets/img/africa.jpg" title = "One of my favourite songs" width="80%" height="auto"></a></p>
 </div>
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
