--- a/posts/2019-04-28-diffindiff_part1.qmd
+++ b/posts/2019-04-28-diffindiff_part1.qmd
@@ -12,7 +12,7 @@ execute:
 
 <div style="text-align:center;">
 <p><a href="https://en.wikipedia.org/wiki/Joke">
-<img src="../assets/img/distracted_economist.jpg" title = "Soon, humanity will only communicate in memes"></a></p>
+<img src="../assets/img/distracted_economist.jpg" title = "Soon, humanity will only communicate in memes" width="80%" height="auto" width="80%" height="auto"></a></p>
 </div>
 <p>I am currently working on a package for the R programming language; its initial goal was to simply
 distribute the data used in the Card and Krueger 1994 paper that you can read
@@ -32,14 +32,14 @@ but only for large restaurants (see Ropponen and Olli, 2011).</p>
 blog post, I will discuss preparing the data to make it available as a demo dataset inside the
 package, and then writing and documenting functions.</p>
 <p>The first step to create a package, is to create a new project:</p>
-<p><img src="../assets/img/package_01.png" /><!-- --></p>
+<p><img src="../assets/img/package_01.png" / width="80%" height="auto"><!-- --></p>
 <p>Select “New Directory”:</p>
-<p><img src="../assets/img/package_02.png" /><!-- --></p>
+<p><img src="../assets/img/package_02.png" / width="80%" height="auto"><!-- --></p>
 <p>Then “R package”:</p>
-<p><img src="../assets/img/package_03.png" /><!-- --></p>
+<p><img src="../assets/img/package_03.png" / width="80%" height="auto"><!-- --></p>
 <p>and on the window that appears, you can choose the name of the package, as well as already some
 starting source files:</p>
-<p><img src="../assets/img/package_04.png" /><!-- --></p>
+<p><img src="../assets/img/package_04.png" / width="80%" height="auto"><!-- --></p>
 <p>Also, I’d highly recommend you click on the “Create a git repository” box and use git within your
 project for reproducibility and sharing your code more easily. If you do not know git, there’s a lot of
 online resources to get you started. It’s not super difficult, but it does require making some new
