--- a/posts/2019-05-18-xml2.qmd
+++ b/posts/2019-05-18-xml2.qmd
@@ -12,7 +12,7 @@ execute:
 
 <div style="text-align:center;">
 <p><a href="https://en.wikipedia.org/wiki/Death_mask">
-<img src="../assets/img/napoleon_death_mask.jpg" title = "I will probably be the only reader of this blog post"></a></p>
+<img src="../assets/img/napoleon_death_mask.jpg" title = "I will probably be the only reader of this blog post" width="80%" height="auto"></a></p>
 </div>
 <p>Today I’ve removed my system’s R package and installed MRO instead. While re-installing all packages,
 I’ve encountered one of the most frustrating error message for someone installing packages from
