--- a/posts/2019-06-20-tidy_eval_saga.qmd
+++ b/posts/2019-06-20-tidy_eval_saga.qmd
@@ -12,7 +12,7 @@ execute:
 
 <div style="text-align:center;">
 <p><a href="https://en.wikipedia.org/wiki/Row_and_column_vectors">
-<img src="../assets/img/curly.jpg" title = "Not that kind of columns" width="1119" height="720"></a></p>
+<img src="../assets/img/curly.jpg" title = "Not that kind of columns" width="80%" height="auto" width="80%" height="auto"></a></p>
 </div>
 <p>Writing functions that take data frame columns as arguments is a problem that most R users have been
 confronted with at some point. There are different ways to tackle this issue, and this blog post will
